# opensoar

./: .gitignore  .mypy.ini  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml  test_trigger.yml
OpenSoar/competition/: competition_day.py  competitor.py  daily_results_page.py  soaringspot.py  strepla.py
OpenSoar/task/: aat.py  competition_day.py  competitor.py  race_task.py  task.py  taskpoint.py  trip.py  waypoint.py
OpenSoar/thermals/: flight_phases.py  pysoar_thermal_detector.py
OpenSoar/utilities/: helper_functions.py
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  index.rst
opensoar/competition/: __init__.py  competition_day.py  competitor.py  crosscountry.py  daily_results_page.py  sgp.py  soaringspot.py  strepla.py
opensoar/task/: __init__.py  aat.py  race_task.py  task.py  trip.py  waypoint.py
opensoar/thermals/: __init__.py  flight_phases.py  pysoar_thermal_detector.py  thermal_detector.py  xcsoar_thermal_detector.py
opensoar/utilities/: __init__.py  geojson_serializers.py  helper_functions.py  retry_utils.py
tests/: test_opensoar.py
tests/competition/: test_crosscountry.py  test_crosscountry_api.py  test_sgp.py  test_sgp_api.py  test_soaringspot.py  test_strepla.py
tests/igc_files/: aat_completed.igc  aat_outlanding_inside_sector.igc  aat_outlanding_outside_sector.igc  aat_strepla.igc  missing_lcu_lseeyou_lines.igc  outlanding_race_task.igc  outlanding_race_task_enl.igc
tests/task/: helper_functions.py  test_aat.py  (+4 more)
(+9 files in other folders)
